<resources>
    <string name="app_name">DaVinciApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DaVinciApp</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>

    <string name="menu_Alta">Alta</string>
    <string name="menu_Baja">Baja</string>
    <string name="menu_Modificacion">Modificación</string>
    <string name="menu_Pintor">Pintor</string>
    <string name="menu_Escultor">Escultor</string>
    <string name="menu_Cientifico">Científico</string>
    <string name="menu_Inventor">Inventor</string>
    <string name="imagenCena">Cuadro pintado por Leonardo, la ultima cena</string>
    <string name="Pintor">Leonardo creó La última cena, su mejor obra, la más serena y alejada del mundo temporal, durante esos años caracterizados por los conflictos bélicos, las intrigas, las preocupaciones y las calamidades. La dio por terminada, aunque él, eterno insatisfecho, declaró que tendría que seguir trabajando en ella. Fue expuesta a la vista de todos y contemplada por muchos. La fama que el “gran caballo” había hecho surgir se asentó sobre cimientos más sólidos. Desde ese momento se le consideró sin discusión uno de los primeros maestros de Italia, si no el primero. Los artistas acudían desde muy lejos al refectorio del convento de Santa Maria delle Grazie, miraban la pintura con detenimiento, la copiaban y discutían. El rey de Francia, al entrar a Milán, acarició la idea de desprender el fresco de la pared para llevárselo a su país. Durante su realización se tejieron innumerables leyendas en torno al maestro y a su obra. Los relatos de Bandello y Giraldi, dedicados por lo demás a temas radicalmente distintos, recogen también la génesis de La Última Cena.
    </string>
    <string name="Escultor">No se conserva ninguna de sus esculturas. El proyecto escultórico de Leonardo del que más se sabe es el de una estatua ecuestre que representara a Francisco Sforza, padre de Ludovico el Moro. Sobrepasaba en tamaño las otras dos estatuas ecuestres de bronce del Renacimiento: Gattamelata de Donatello en Padua y Bartolomeo Colleoni de Verrocchio en Venecia. Leonardo ejecutó en arcilla el modelo, conocido como el "Gran Caballo". Estaba previsto que fuera una estatua en bronce, de ocho metros de altura, y se alzaría en Milán. Se prepararon 70 toneladas de metal para moldearla. El monumento quedó sin acabar durante varios años, lo que no era inusual en Leonardo. En 1495 el bronce se usó para fabricar cañones para el duque en un intento de salvar Milán de los franceses bajo el reinado de Carlos VIII de Francia en 1495. Por iniciativa privada, se construyó en 1999 en Nueva York una estatua construida según sus planos que fue donada a la ciudad de Milán, donde se erigió.
    </string>
    <string name="Cientifico1"> El método científico de Leonardo se basaba fundamentalmente en la observación, “la ciencia fue el capitán, la práctica fue el soldado”. Sus investigaciones científicas no se refieren exclusivamente más que a lo que ha estado acompañado de la práctica.  Leonardo intentó comprender los fenómenos describiéndolos e ilustrándolos con mucho detalle, no insistiendo demasiado en las explicaciones teóricas. Sus estudios sobre el vuelo de los pájaros o el movimiento del agua son sin duda muy destacables. Como le faltaba formación básica en latín y en matemáticas, los investigadores contemporáneos ignoraron al sabio Leonardo; sin embargo, su sorprendente autodidactismo lo llevó a aprender latín solo.
    </string>
    <string name="Cientifico2">En la década de 1490, estudió matemáticas al lado de Luca Pacioli y realizó una serie de dibujos de sólidos regulares en una forma esquelética para que formaran parte del libro Divina Proportione (1509).  Estaba fascinado por la idea de lo absoluto y lo universal.  Sin embargo, su cultura matemática era fundamentalmente práctica, con las limitaciones propias de los abacistes de su tiempo, con algunos conocimientos de la geometría euclidiana, de perspectiva y de mecánica, en la línea de lo que sabían los teóricos de su tiempo. Sin embargo, Leonardo concibió un instrumento con un sistema articulado destinado a permitir una solución mecánica para el problema de Alhazen, una cuestión esencialmente técnica, que testimonia un conocimiento profundo de las propiedades de la cónica.
    </string>
    <string name="Cientifico3">Su nivel de física fue bastante limitado, no fue nunca artillero y nunca formuló teoría alguna relativa a la balística. Sin embargo, como lo atestiguan algunos de sus esquemas, Leonardo pudo intuir, como se podía observar en un surtidor de agua, arguyendo que no existía parte rectilínea en la trayectoria de un proyectil de artillería, al contrario de lo que se creía en aquel tiempo. Pero no profundizó en una vía que Tartaglia y Benedetti desarrollaron y que culminó Galileo. De igual manera, estudió los temas relacionados con la luz y la óptica;  y en hidrología, la única ley que llegó a formular tuvo relación con los cursos de agua. En cuanto al ámbito de la química, puso a punto de un alambique y algunas investigaciones sobre alquimia que practicó en Roma.  Si, en arquitectura, Alberti o Francesco di Giorgio se preocuparon por la solidez de las vigas, no lo hicieron desde formulaciones matemáticas como Leonardo, que se interesó por el problema de la flexión y consiguió definir “leyes” aún imperfectas, por ejemplo, en relación a la línea elástica en el caso de vigas de secciones diferentes.  Así, eliminaba el módulo elástico y el momento de fuerza al que había aludido Jordanus Nemorarius.
    </string>
    <string name="Inventor"> Cada vez que Da Vinci observaba a los pájaros, creía emocionado que un día el hombre también volaría a través de los cielos. Uno de los inventos más famosos de da Vinci, la máquina voladora (también conocida como el "ornitóptero") está inspirado en el vuelo de los animales alados, el cual da Vinci esperaba replicar. De hecho, en sus notas, menciona los murciélagos, barriletes y aves como fuentes de inspiración.
    </string>
</resources>