<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Alta"
        android:orderInCategory="100"
        android:title="@string/menu_Alta"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Baja"
        android:orderInCategory="100"
        android:title="@string/menu_Baja"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Modificacion"
        android:orderInCategory="100"
        android:title="@string/menu_Modificacion"
        app:showAsAction="never" />
</menu>