<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_Pintor">

    <fragment
        android:id="@+id/nav_Pintor"
        android:name="es.studium.pmdm_practicica4.ui.Pintor.PintorFragment"
        android:label="@string/menu_Pintor"
        tools:layout="@layout/pintor_fragment" />

    <fragment
        android:id="@+id/nav_Escultor"
        android:name="es.studium.pmdm_practicica4.ui.Escultor.EscultorFragment"
        android:label="@string/menu_Escultor"
        tools:layout="@layout/escultor_fragment" />

    <fragment
        android:id="@+id/nav_Cientifico"
        android:name="es.studium.pmdm_practicica4.ui.Cientifico.CientificoFragment"
        android:label="@string/menu_Cientifico"
        tools:layout="@layout/cientifico_fragment" />

    <fragment
        android:id="@+id/nav_Inventor"
        android:name="es.studium.pmdm_practicica4.ui.Inventor.InventorFragment"
        android:label="@string/menu_Inventor"
        tools:layout="@layout/inventor_fragment" />
</navigation>